# rfd-protocol

./: .coverage.fedora.3537074.XHyqHPfx  .cz.toml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Agent-Prompts-session-9.txt  Agent-Prompts.txt  CHANGELOG.md  CI_CD_IMPROVEMENTS.md  CLAUDE.md  HANDOFF.md  NEXT_SESSION_CODEBASE_CLEANUP_PROMPT.md  NEXT_SESSION_KICKOFF.md  NEXT_SESSION_PLAN.md  NEXT_SESSION_PLAN_UPDATED.md  PREVENTION_SYSTEM.md  PROGRESS.md  PROGRESS.md.deprecated  PROJECT.md  PROJECT.md.deprecated  PUBLISH_TO_PYPI.md  PYPI_SETUP.md  README.md  READY_FOR_PYPI.md  REALITY_CHECK.md  REALITY_CHECK_2025_09_24.md  RELEASE_PROCESS.md  RFD-2-FINAL-TEST-REPORT.md  RFD-4-CRITICAL-BUG-REPORT.md  RFD-MAIN-FINAL-ASSESSMENT.md  RFD-MAIN.md  RFD-PRIME.md  RFD-TESTING-STANDARDS.md  RFD2_INDEPENDENT_VERIFICATION_REPORT.md  RFD4_EXTENSIVE_VALIDATION_REPORT.md  RFD4_FINAL_VALIDATION_REPORT.md  RFD_CLEANUP_PLAN.md  RFD_TRUTH_ASSESSMENT.md  SESSION_COMPLETE.md  (+26 more)
.claude/commands/: rfd-check.md  rfd-fix.md  rfd-init.md  rfd-plan.md  rfd-resume.md  rfd-setup.md  rfd-spec.md
.github/: SETUP_SECRETS.md
.github/workflows/: ci.yml  release.yml  validate.yml
.rfd/: config.yaml  memory.db  rfd.py  session.py  validation.py  version.json
.rfd-legacy/: build.py  rfd.py  session.py  spec.py  validation.py
.rfd-legacy/context/: current.md  memory.json
.rfd.backup.20250924_124211/context/: current.md  memory.json
.rfd.backup.20250926_080330/: config.yaml
.rfd.backup.20250926_080330/context/snapshots/: session_10_doc_audit_v5_20250925_162805.json  session_12_doc_audit_v5_20250925_163800.json  session_15_test_resume_20250925_213630.json  session_17_test_context_20250925_214404.json  session_21_branch_cleanup_test_20250925_225333.json
.rfd.backup.20250926_095606/: version.json
.rfd.backup.20250926_095606/context/: memory.json
.rfd.backup.20250926_095606/context/snapshots/: session_16_test_isolation_20250925_213705.json  session_18_nexus_protocol_phase2_20250925_214759.json  session_20_nexus_protocol_phase2_20250925_225210.json  session_22_gap_analysis_20250926_091139.json  session_4_fix_critical_issues_20250924_132738.json
.rfd/context/: current.md  memory.json
.rfd/context/snapshots/: session_11_v5_production_ready_20250925_163200.json  session_13_gap_analysis_20250925_165804.json  session_14_documentation_updates_20250925_171548.json  session_19_nexus_protocol_phase2_20250925_225014.json  session_5_cli_refactor_20250925_135115.json  session_6_test_context_20250925_135227.json  session_7_test_context_20250925_135311.json  session_8_test_context_20250925_135346.json  session_9_test_context_20250925_153302.json
.rfd/specs/: automated_qa_cycles.yaml
docs/: @RFD-PROTOCOL.md  AGENTS.md  CI-CD.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  CLAUDE_INTEGRATION.md  CLI_REFERENCE.md  COMMAND_STRUCTURE.md  CONFIG_SCHEMA.md  DATABASE_FIRST_ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  INSTALL.md  PROJECT_SCHEMA.md  README.md  RFD-PLAN.md  RFD-PROTOCOL.md  RFD_AI_GUIDE.md  RFD_WALKTHROUGH.md  SCHEMA_SIMPLIFICATION_PLAN.md  TERMINOLOGY.md
docs/archive/: Agent-Prompts.txt  HANDOFF.md  PRODUCTION-READY-v1.0.md  RFD-2-FINAL-TEST-REPORT.json  RFD-AGENTS.json  RFD-MAIN-AUDIT-PHASE9.md  TEST_CLEANUP_ORGANIZATION_STRATEGY.md  final_test_results.json  rfd.py
docs/archive/bootstrap/: Agent-Prompts.txt  PHASE_7_STATUS.md  TESTING_CHAOS_ASSESSMENT.md
memory/: constitution.md
nexus_rfd_protocol/: rfd.py  validation.py
research/: CONSENSUS-FINAL.md  DISCUSSION-LOG.md  brain-dump.md
research/round-1/: RFD-1-ANALYSIS.md  RFD-2-ANALYSIS.md  RFD-3-ANALYSIS.md
research/round-2/: RFD-1-DEEP-ANALYSIS.md  RFD-1-ROUND2.md  RFD-2-SIMPLICITY.md  RFD-3-REALITY.md
research/round-3/: RFD-1-CONSENSUS.md  RFD-2-CONSENSUS.md  RFD-3-CONSENSUS.md
research/round-4/: RFD-1-FINAL-DECISION.md
scripts/: build-and-test.py  quick-setup.sh  setup-project.py
src/rfd/: __init__.py  ai_validator.py  auto_handoff.py  build.py  claude_integration.py  cli.py  cli_enforcement.py  feature_manager.py  init_wizard.py  migration.py  project_updater.py  rfd.py  session.py  spec.py  spec_formatter.py  spec_generator.py  speckit_integration.py  validation.py  workflow_engine.py
test_project_final/: PROJECT.md  ROUND_6_FIXES_SUMMARY.md  __init__.py  debug_edge_cases.py  debug_mixed_files.py  debug_multi_files.py  debug_validation.py  final_reality_test.py  rfd.py  session.py  simplified_reality_test.py  test_hallucination_rate.py  test_project.md  test_rfd_corrected.py  test_rfd_workflow.py  validation.py
test_project_final/.rfd/: build.py  validation.py
test_verification/: fake_ai_claim.py  test_end_to_end.py
tests/: FINAL_TEST_REPORT.md  conftest.py  test_components.py  test_drop_in.py  test_integration.py
tests/integration/: rfd2_verification_test.py  test_critical_fixes.py
tests/system/: audit_test.py  bug_test.py  rfd4_final_validation.py
tests/unit/: test_hallucination.py
tools/: comprehensive_audit.py  detailed_bug_analysis.py
(+18 files in other folders)
